Fix for references

--- a/Rexide.Core/Test/Test.csproj
+++ b/Rexide.Core/Test/Test.csproj
@@ -117,5 +117,8 @@
       <Name>Rexide</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
