--- a/Carbon.Core/Test/Test.csproj
+++ b/Carbon.Core/Test/Test.csproj
@@ -112,13 +112,13 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Rexide\Rexide.csproj">
-      <Project>{db7ac4b9-e0f3-4e8f-b977-dd32709359a4}</Project>
-      <Name>Rexide</Name>
-    </ProjectReference>
+    <None Include="app.config" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="app.config" />
+    <ProjectReference Include="..\Carbon\Carbon.csproj">
+      <Project>{db7ac4b9-e0f3-4e8f-b977-dd32709359a4}</Project>
+      <Name>Carbon</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
