--- a/Carbon.Core/Carbon/packages.config
+++ b/Carbon.Core/Carbon/packages.config
@@ -11,11 +11,14 @@
   <package id="MongoDB.Driver.Core" version="2.17.1" targetFramework="net48" />
   <package id="MongoDB.Libmongocrypt" version="1.5.5" targetFramework="net48" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="net48" />
+  <package id="protobuf-net" version="3.1.17" targetFramework="net48" />
+  <package id="protobuf-net.Core" version="3.1.17" targetFramework="net48" />
   <package id="SharpCompress" version="0.30.1" targetFramework="net48" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
   <package id="System.Collections" version="4.3.0" targetFramework="net48" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net48" />
+  <package id="System.Collections.Immutable" version="1.7.1" targetFramework="net48" />
   <package id="System.Console" version="4.3.0" targetFramework="net48" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net48" />
   <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="net48" />
