--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -20,6 +20,5 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore "Carbon.Core"
     - name: Build
-      run: dotnet build "Carbon.Core" --no-restore
-    - name: Test
-      run: dotnet test --no-build --verbosity normal
+      run: msbuild.exe "Carbon.Core/Carbon.Core.sln" /nologo /nr:false /p:DeployOnBuild=true /p:DeployDefaultTarget=WebPublish /p:WebPublishMethod=FileSystem /p:DeleteExistingFiles=True /p:platform="Any CPU" /p:configuration="Release" /p:PublishUrl="../_build"
+        
