--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -13,14 +13,22 @@ jobs:
     steps:
     - name: Setup MSBuild
       uses: microsoft/setup-msbuild@v1
-
+    - name: Setup NuGet
+      uses: NuGet/setup-nuget@v1.0.2
+      
     - uses: actions/checkout@v3
+    
     - name: Setup .NET
       uses: actions/setup-dotnet@v2
       with:
         dotnet-version: 6.0.x
+        
     - name: Restore dependencies
       run: dotnet restore "Carbon.Core"
+      
+    - name: Restore Packages
+      run: nuget restore "Carbon.Core/Carbon.Core.sln"
+      
     - name: Build
       run: msbuild.exe "Carbon.Core/Carbon.Core.sln" /nologo /nr:false /p:DeployOnBuild=true /p:DeployDefaultTarget=WebPublish /p:WebPublishMethod=FileSystem /p:DeleteExistingFiles=True /p:platform="Any CPU" /p:configuration="Release" /p:PublishUrl="../_build"
         
