--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -29,4 +29,4 @@ jobs:
       run: dotnet restore "Carbon.Core" --force
       
     - name: Build
-      run: msbuild "Carbon.Core" /p:Configuration=Release
+      run: msbuild "Carbon.Core" -t:restore -p:RestorePackagesConfig=true /p:Configuration=Release
