--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -30,3 +30,16 @@ jobs:
       
     - name: Build
       run: msbuild "Carbon.Core" -t:restore -p:RestorePackagesConfig=true /p:Configuration=Release
+
+
+  release:
+    runs-on: windows-latest
+    steps:
+      - name: Push tag for released action
+        run: |
+          git config --global user.email "raulssorban@gmail.com"
+          git config --global user.name "raul"
+          git add -f "Carbon.Core/Carbon/bin/Release"
+          git commit -m "${GITHUB_REF:10} release"
+          git tag "${GITHUB_REF:10}-release"
+          git push origin refs/tags/${GITHUB_REF:10}-release
