--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -37,6 +37,7 @@ jobs:
     steps:
       - name: Push tag for released action
         run: |
+          echo %cd%
           git config --global user.email "raulssorban@gmail.com"
           git config --global user.name "raul"
           git add -f "Carbon.Core/Carbon/bin/Release"
