--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -36,7 +36,7 @@ jobs:
         echo %cd%
         git config --global user.email "raulssorban@gmail.com"
         git config --global user.name "raul"
-        git add -f "Carbon.Core/Carbon/bin/Release"
+        git add -f "Carbon.Core/Carbon/bin/Release/Carbon1.0.001.dll"
         git commit -m "${GITHUB_REF:10} release"
         git tag "${GITHUB_REF:10}-release"
         git push origin refs/tags/${GITHUB_REF:10}-release
