--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -17,7 +17,7 @@ jobs:
     - uses: actions/checkout@v3
       
     - name: Build
-      run: msbuild "Carbon.Core" -t:restore -p:RestorePackagesConfig=true;p:Configuration=Release
+      run: msbuild "Carbon.Core" -t:restore -p:RestorePackagesConfig=true /p:Configuration=Release
 
     - name: Push tag for released action
       run: |
