--- a/Carbon.Core/Carbon/Carbon.csproj
+++ b/Carbon.Core/Carbon/Carbon.csproj
@@ -10,7 +10,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Carbon.Core</RootNamespace>
-    <AssemblyName>Carbon1.0.001</AssemblyName>
+    <AssemblyName>Carbon1.0.021</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -77,6 +77,9 @@
     </Reference>
     <Reference Include="Fleck">
       <HintPath>..\..\Rust\RustDedicated_Data\Managed\Fleck.dll</HintPath>
+    </Reference>
+    <Reference Include="Humanlights.System">
+      <HintPath>..\..\External\Humanlights.System.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Win32.Primitives, Version=4.0.2.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\..\Carbon.Core\packages\Microsoft.Win32.Primitives.4.3.0\lib\net46\Microsoft.Win32.Primitives.dll</HintPath>
@@ -294,8 +297,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CarbonCorePlugin.cs" />
     <Compile Include="Harmony\HookExecutor.cs" />
-    <Compile Include="Harmony\Loader.cs" />
+    <Compile Include="CarbonLoader.cs" />
     <Compile Include="Oxide\Command.cs" />
     <Compile Include="Oxide\Configuration\ConfigFile.cs" />
     <Compile Include="Oxide\Configuration\DataFileSystem.cs" />
@@ -305,6 +309,7 @@
     <Compile Include="Oxide\CUI\CuiCore.cs" />
     <Compile Include="Oxide\Extensions\ExtensionMethods.cs" />
     <Compile Include="Oxide\Hooks\Chat_sayAs.cs" />
+    <Compile Include="Oxide\Hooks\ModdedServerPatch.cs" />
     <Compile Include="Oxide\Hooks\ServerMgr_OnDisconnected.cs" />
     <Compile Include="Oxide\Hooks\SaveRestore_DoAutomatedSave.cs" />
     <Compile Include="Oxide\Hooks\ServerMgr_Shutdown.cs" />
@@ -331,7 +336,7 @@
     <Compile Include="Oxide\WebRequest.cs" />
     <Compile Include="Oxide\_Attributes.cs" />
     <Compile Include="Oxide\_Extensions.cs" />
-    <Compile Include="Oxide\_Carbon.cs" />
+    <Compile Include="CarbonCore.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
