--- a/Carbon.Core/Carbon/Carbon.csproj
+++ b/Carbon.Core/Carbon/Carbon.csproj
@@ -10,7 +10,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Carbon.Core</RootNamespace>
-    <AssemblyName>Carbon1.0.021</AssemblyName>
+    <AssemblyName>Carbon1.0.031</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -308,15 +308,16 @@
     <Compile Include="Oxide\CUI\CuiHelper.cs" />
     <Compile Include="Oxide\CUI\CuiCore.cs" />
     <Compile Include="Oxide\Extensions\ExtensionMethods.cs" />
-    <Compile Include="Oxide\Hooks\Chat_sayAs.cs" />
-    <Compile Include="Oxide\Hooks\ModdedServerPatch.cs" />
-    <Compile Include="Oxide\Hooks\ServerMgr_OnDisconnected.cs" />
-    <Compile Include="Oxide\Hooks\SaveRestore_DoAutomatedSave.cs" />
-    <Compile Include="Oxide\Hooks\ServerMgr_Shutdown.cs" />
-    <Compile Include="Oxide\Hooks\Template.cs" />
-    <Compile Include="Oxide\Hooks\ServerMgr_PlayerInit.cs" />
-    <Compile Include="Oxide\Hooks\ServerMgr_OpenConnection.cs" />
-    <Compile Include="Oxide\Hooks\ConsoleSystem_Run.cs" />
+    <Compile Include="Hooks\Chat_sayAs.cs" />
+    <Compile Include="Hooks\ModdedServerPatch.cs" />
+    <Compile Include="Hooks\ServerMgr_OnDisconnected.cs" />
+    <Compile Include="Hooks\SaveRestore_DoAutomatedSave.cs" />
+    <Compile Include="Hooks\ServerMgr_Shutdown.cs" />
+    <Compile Include="Hooks\Harmony.cs" />
+    <Compile Include="Hooks\Template.cs" />
+    <Compile Include="Hooks\ServerMgr_PlayerInit.cs" />
+    <Compile Include="Hooks\ServerMgr_OpenConnection.cs" />
+    <Compile Include="Hooks\ConsoleSystem_Run.cs" />
     <Compile Include="Oxide\Interface.cs" />
     <Compile Include="Oxide\Libraries\Covalence.cs" />
     <Compile Include="Oxide\Libraries\GroupData.cs" />
