--- a/Carbon.Core/Carbon/packages.config
+++ b/Carbon.Core/Carbon/packages.config
@@ -3,6 +3,7 @@
   <package id="Costura.Fody" version="5.7.0" targetFramework="net48" developmentDependency="true" />
   <package id="DnsClient" version="1.6.1" targetFramework="net48" />
   <package id="Fody" version="6.5.5" targetFramework="net48" developmentDependency="true" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="6.0.0" targetFramework="net48" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net48" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net48" />
   <package id="Microsoft.Win32.Registry" version="5.0.0" targetFramework="net48" />
@@ -11,6 +12,7 @@
   <package id="MongoDB.Driver.Core" version="2.17.1" targetFramework="net48" />
   <package id="MongoDB.Libmongocrypt" version="1.5.5" targetFramework="net48" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="net48" />
+  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net48" />
   <package id="protobuf-net" version="3.1.17" targetFramework="net48" />
   <package id="protobuf-net.Core" version="3.1.17" targetFramework="net48" />
   <package id="SharpCompress" version="0.30.1" targetFramework="net48" />
@@ -43,7 +45,7 @@
   <package id="System.Reflection.Primitives" version="4.3.0" targetFramework="net48" />
   <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net48" />
   <package id="System.Runtime" version="4.3.0" targetFramework="net48" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net48" />
   <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net48" />
   <package id="System.Runtime.Handles" version="4.3.0" targetFramework="net48" />
   <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net48" />
@@ -58,10 +60,14 @@
   <package id="System.Text.Encoding" version="4.3.0" targetFramework="net48" />
   <package id="System.Text.Encoding.CodePages" version="5.0.0" targetFramework="net48" />
   <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="net48" />
+  <package id="System.Text.Encodings.Web" version="6.0.0" targetFramework="net48" />
+  <package id="System.Text.Json" version="6.0.5" targetFramework="net48" />
   <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="net48" />
   <package id="System.Threading" version="4.3.0" targetFramework="net48" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net48" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="net48" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
   <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="net48" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net48" />
 </packages>
