Fixed recursive method calls Inject only latest version of Carbon in CS plugins (if multiple Carbon assemblies are injected in the domain)

--- a/Carbon.Core/Carbon/packages.config
+++ b/Carbon.Core/Carbon/packages.config
@@ -32,6 +32,7 @@
   <package id="System.IO.Compression.ZipFile" version="4.3.0" targetFramework="net48" />
   <package id="System.IO.FileSystem" version="4.3.0" targetFramework="net48" />
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net48" />
+  <package id="System.IO.FileSystem.Watcher" version="4.3.0" targetFramework="net48" />
   <package id="System.Linq" version="4.3.0" targetFramework="net48" />
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net48" />
   <package id="System.Memory" version="4.5.4" targetFramework="net48" />
