--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -17,7 +17,7 @@ jobs:
       with:
         artifacts: "Carbon.Core1.0.0.zip"
         bodyFile: "body.md"
-        token: ${{ secrets.YOUR_GITHUB_TOKEN }}
+        token: ${{ secrets.GITHUB_TOKEN }}
         
     - name: Setup MSBuild
       uses: microsoft/setup-msbuild@v1
