--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -3,8 +3,10 @@ name: .NET
 on:
   push:
     branches: [ "main" ]
+    tags:
+      - '*'
   pull_request:
-    branches: [ "main" ]
+    branches: [ "main" ]    
 
 jobs:
   build:
