--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -18,7 +18,7 @@ jobs:
         # Artifact name
         name: "Release"
         # A file, directory or wildcard pattern that describes what to upload
-        path: Carbon.Core1.0.0*
+        path: ./Carbon.Core*.exe
         # The desired behavior if no files are found using the provided path.
             
     - name: Setup MSBuild
