--- a/Carbon.Core/Carbon.Extended/Carbon.Extended.csproj
+++ b/Carbon.Core/Carbon.Extended/Carbon.Extended.csproj
@@ -125,6 +125,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="OnHammerHit.cs" />
     <Compile Include="OnLootEntityEnd.cs" />
     <Compile Include="OnLootEntity.cs" />
     <Compile Include="OnEntityDeath.cs" />
